--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,11 +211,11 @@
     "\n",
     "plt.figure(figsize = [10, 5])\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.gca().set_title('Original Histogram')\n",
+    "plt.title('Original Histogram')\n",
     "im_h = cv.calcHist([img],[0],None,[256],[0,256])\n",
     "plt.plot(im_h)\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.gca().set_title('Corrected Histogram')\n",
+    "plt.title('Corrected Histogram')\n",
     "g_h = cv.calcHist([g],[0],None,[256],[0,256])\n",
     "plt.plot(g_h)\n",
     "plt.show()\n",
